--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "personal-developer-portfolio",
-  "private": true,
+  "homepage": "https://christine2850.github.io/personal-portfolio/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
